--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         </section>
     </main>
 
-    <div class="position-fixed top-50 start-50 translate-middle">
+    <div class="position-fixed top-50 start-50 translate-middle p-3">
         <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <strong class="me-auto">Mensaje</strong>
