--- a/index.html
+++ b/index.html
@@ -93,7 +93,16 @@
         </section>
     </main>
 
-    <div class="position-fixed top-50 start-50 translate-middle p-3">
+    <footer class="text-center text-lg-start bg-white text-muted">
+        <div class="text-center p-4" style="background-color: rgba(0, 0, 0, 0.025);">
+        <a class="text-reset fw-bold" href="https://github.com/eamarquezh/simula-cajero" target="_blank">
+            <i class="bi bi-github"></i>eamarquezh
+        </a>
+        </div>
+
+    </footer>
+
+    <div class="position-fixed start-50 translate-middle p-3" style="top: 300px;">
         <div id="myToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
           <div class="toast-header">
             <strong class="me-auto">Mensaje</strong>
